[project]
name = "CaliFinder"
dynamic = ["version"]
requires-python = ">=3.8"
readme = {file="README.md", content-type="text/markdown"}
keywords = ["optical interferometry", "astrophysics"]
description = "Find and verify calibrator stars for optical interferometry targets at the CHARA Array"
authors = [
    {name = "Akshat S. Chaturvedi", email = "achaturvedi3@gsu.edu"},
    {name = "Mahir Patel"}
]
dependencies = [
    "astropy>=5.2.2",
    "astroquery>=0.4.7",
    "numpy>=1.24.4",
]
